# SERP2

./: README.md
SERP2/: setup.py
SERP2/Arduino/: motor_control.ino
SERP2/Arduino/libraries/Rosserial_Arduino_Library/src/serp/: Velocity.h
SERP2/serp/: CMakeLists.txt
SERP2/serp/include/: graphical_interface.glade  graphical_interface.h  logic_node.h  logica_node.h  object_detection.h  proximity_sensor.h
SERP2/serp/include/images/: graphical_interface.glade
SERP2/serp/launch/: object_detection.launch  proximity_sensor.launch
SERP2/serp/launch/GlobalLauncher/: New  launch_serp.sh
SERP2/serp/msg/: ObjectDetection.msg
SERP2/serp/src/: graphical_interface.cpp  logic_node.cpp  logica_node.cpp  object_detection.cpp  proximity_sensor.cpp  vision_node.py
matrix_tests/: CMakeLists.txt  package.xml
matrix_tests/config/: img.yaml
matrix_tests/include/: logica_node.h
matrix_tests/launch/: matrix_test.launch
matrix_tests/msg/: Matrix.msg  Velocity.msg
matrix_tests/src/: graphical_interface.cpp  logica_node.cpp  main_node.cpp  object_detection.cpp  vision_node.py
